--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ androidxActivity = "1.7.2"
 material3 = "1.2.0-alpha08"
 androidxCompose = "1.4.3"
 androidxComposeCompiler = "1.5.1"
+androidxNavigation = "2.7.4"
 spotless = "6.9.0"
 junit = "4.13.2"
 org-jetbrains-kotlin-jvm = "1.9.0"
@@ -23,6 +24,7 @@ org-jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "org
 compose-themer = { id = "com.github.proeb.composethemer", version.ref = "compose-themer" }
 
 [libraries]
+kotlin-reflect = { group = "org.jetbrains.kotlin", name = "kotlin-reflect", version.ref = "kotlin" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "androidxActivity" }
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "androidxCompose" }
 androidx-compose-material-iconsExtended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "androidxCompose" }
@@ -31,6 +33,7 @@ androidx-compose-foundation = { group = "androidx.compose.foundation", name = "f
 androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "androidxCompose" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "androidxCompose" }
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "androidxCompose" }
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavigation" }
 ksp = { module = "com.google.devtools.ksp:symbol-processing", version.ref = "ksp" }
 compose-themer-processor = { group = "com.github.proeb.composethemer", name = "composethemer-processor", version.ref = "compose-themer" }
 compose-themer-core = { group = "com.github.proeb.composethemer", name = "composethemer-core", version.ref = "compose-themer" }
